fixed large about image on smaller devices

--- a/src/About.css
+++ b/src/About.css
@@ -1,3 +1,9 @@
-@media (max-width: 768px) #headshot {
-  width: 50%;
+@media (max-width: 768px) {
+  #headshot {
+    width: 50%;
+    display: flex;
+  }
+  .intro-1 {
+    margin: auto;
+  }
 }
